# hext-debian

./: .travis.yml  CMakeLists.txt  README.md  hext_0.8.2.orig.tar.gz.delta  hext_0.8.2.orig.tar.gz.id
cmake/: FindPHP.cmake  FindPocoFoundation.cmake  HextCompilerIsClangOrGcc.cmake  HextEnableWarnings.cmake  HextForceCppStd.cmake  HextOptionRunRagel.cmake
debian/: README.Debian  changelog  control  copyright  htmlext.install  libhext-dev.install  libhext0.8.install  rules  watch
debian/source/: lintian-overrides
debian/tests/: control
debian/upstream/: signing-key.asc
htmlext/: main.cpp
htmlext/htmlext/: ErrorOutput.cpp  ErrorOutput.h  File.cpp  File.h  Json.cpp  Json.h  ProgramOptions.cpp  ProgramOptions.h  Version.cpp.in  Version.h
libhext/: CMakeLists.txt
libhext/bindings/nodejs/: CMakeLists.txt  htmlext.js  index.js  package.json
libhext/bindings/nodejs/src/: Hextjs.cpp  Html.cpp  Html.h  Rule.cpp  Rule.h
libhext/bindings/nodejs/test/: blackbox.js.sh
libhext/bindings/php/: CMakeLists.txt  htmlext.php  phphext.i
libhext/bindings/php/test/: blackbox.php.sh
libhext/bindings/python/: CMakeLists.txt  htmlext.py
libhext/bindings/python/pytest/: test_hext.py
libhext/bindings/python/test/: blackbox.py.sh
libhext/bindings/ruby/: CMakeLists.txt  htmlext.rb  rbhext.i
libhext/bindings/ruby/test/: blackbox.rb.sh
libhext/bindings/wrapper/: Html.cpp  Html.h  Rule.cpp  Rule.h
libhext/cmake/: HextConfig.cmake
libhext/doc/doxygen/: doxyfile  mainpage.html  mainpage.txt
libhext/examples/: CMakeLists.txt  chaining.cpp  extract-href.cpp  mixed.cpp
libhext/include/hext/: AppendPipe.h  AttributeCapture.h  AttributeCountMatch.h  AttributeMatch.h  BeginsWithTest.h  Builtins.h  Capture.h  CaptureFunction.h  CasePipe.h  ChildCountMatch.h  Cloneable.h  CollapseWsPipe.h  ContainsTest.h  ContainsWordsTest.h  EndsWithTest.h  EqualsTest.h  FunctionCapture.h  FunctionMatch.h  FunctionValueMatch.h  Hext.h  Html.h  HtmlTag.h  Match.h  MatchFunction.h  NegateMatch.h  NegateTest.h  NthChildMatch.h  OnlyChildMatch.h  ParseHext.h  PrependPipe.h  RegexPipe.h  RegexReplacePipe.h  RegexTest.h  Result.h  Rule.h  StringPipe.h  SyntaxError.h  TrimPipe.h  ValueTest.h  Version.h  (+1 more)
libhext/ragel/: Parser.cpp.rl  hext-machine.rl
libhext/scripts/: no-space-diff.sh  run-ragel.sh
libhext/scripts/syntax-hl-ace/: package.json  readme.md  syntax-hl-ace.js
libhext/src/: AppendPipe.cpp  AttributeCapture.cpp  AttributeCountMatch.cpp  AttributeMatch.cpp  BeginsWithTest.cpp  Builtins.cpp  CasePipe.cpp  ChildCountMatch.cpp  CollapseWsPipe.cpp  ContainsTest.cpp  ContainsWordsTest.cpp  EndsWithTest.cpp  EqualsTest.cpp  FunctionCapture.cpp  FunctionMatch.cpp  FunctionValueMatch.cpp  Html.cpp  NegateMatch.cpp  NegateTest.cpp  NodeUtil.cpp  NodeUtil.h  NthChildMatch.cpp  OnlyChildMatch.cpp  ParseHext.cpp  Parser.cpp  Parser.h  PatternValues.cpp  PatternValues.h  PrependPipe.cpp  RegexPipe.cpp  RegexReplacePipe.cpp  RegexTest.cpp  Rule.cpp  RuleMatching.cpp  RuleMatching.h  StringPipe.cpp  StringUtil.cpp  StringUtil.h  SyntaxError.cpp  TrimPipe.cpp  (+1 more)
libhext/test/: CMakeLists.txt
libhext/test/src/: main.cpp
libhext/test/src/builtins/: inner-html-builtin.cpp  strip-tags-builtin.cpp  text-builtin.cpp
libhext/test/src/helper/: common.h  html.h  node.cpp  node.h
libhext/test/src/html/: html.cpp
libhext/test/src/html-tag/: html-tag.cpp
libhext/test/src/parse-hext/: parse-hext.cpp
libhext/test/src/pattern/: attribute-capture.cpp  attribute-count-match.cpp  attribute-match.cpp  begins-with-test.cpp  child-count-match.cpp  contains-test.cpp  contains-words-test.cpp  ends-with-test.cpp  equals-test.cpp  function-capture.cpp  function-match.cpp  function-value-match.cpp  negate-match.cpp  negate-test.cpp  nth-child-match.cpp  only-child-match.cpp  regex-test.cpp
libhext/test/src/pipe/: append-pipe.cpp  case-pipe.cpp  collapsews-pipe.cpp  prepend-pipe.cpp  regex-pipe.cpp  regex-replace-pipe.cpp  string-pipe.cpp  trim-pipe.cpp
libhext/test/src/rule/: rule-matching.cpp  rule.cpp
libhext/test/src/string-util/: char-position.cpp  is-space.cpp  print-numbered-lines.cpp  trim-and-collapse-ws.cpp
man/: htmlext.1  htmlext.ronn
scripts/build-hext-npm/: README.md  build-hextjs-linux.sh  build-hextjs-macosx.sh  bundle-hextjs-npm-package.sh
scripts/build-hext-npm/assets/: README.md  index.js  package.json
scripts/build-hext-php/: build-hext-php.sh
scripts/build-hext-python/: README.md  build-hext-python-macosx.sh  build-hext-python.sh
scripts/build-hext-python/assets/: MANIFEST.in  README.md  setup.py
scripts/docker-static-build-env/: README.md  setup-static-build-env.sh
scripts/docker-static-build-env-jessie/: setup-static-build-env.sh
scripts/generate-manpage/: generate-htmlext-manpage.sh
scripts/python-pip-test/: README.md  python-pip-test-macosx.sh  python-pip-test.sh
scripts/travis/: run-tests.sh
syntaxhl/ace/: hext.js  hext_highlight_rules.js
syntaxhl/vim/ftdetect/: hext.vim
syntaxhl/vim/syntax/: hext.vim
test/: blackbox.sh
test/bats/: htmlext.bats
test/case/: append-pipe.expected  append-pipe.hext  array.expected  array.hext  array.html  attribute-case.expected  attribute-case.hext  attribute-case.html  attribute-count.expected  attribute-count.hext  attribute-count.html  attribute-operators.expected  attribute-operators.hext  attribute-operators.html  carriage-return.expected  carriage-return.hext  chaining-rules-example.expected  chaining-rules-example.hext  chaining-rules-example.html  collapsews-pipe.expected  collapsews-pipe.hext  collapsews-pipe.html  contains-all-words.expected  contains-all-words.hext  contains-all-words.html  doxygen-annotated-class-list.expected  doxygen-annotated-class-list.hext  doxygen-annotated-class-list.html  empty-literal-attrib.expected  empty-literal-attrib.hext  empty-literal-attrib.html  empty-node.expected  empty-node.hext  empty-node.html  encoding-agnostic.expected  encoding-agnostic.hext  encoding-agnostic.html  escapes.expected  escapes.hext  escapes.html  (+187 more)
